# logi-mx-mini-battery-manager

./: Cargo.toml  README.md
draft/first-iter/: input-propmpt.draft
draft/first-iter/output/: architecture-design.draft  readme.draft  rust-implementation.draft  systemd-service-configuration.draft  test-design.draft
draft/second-iter/output/: solaar-grep-battery-capacity.sh
src/: config.rs  main.rs
src/adapter/: LogitechAdapter.rs
src/business/: manager.rs  mod.rs
src/domain/: manager.rs  mod.rs  service.rs
src/hardware/: hid.rs  mod.rs  power.rs  usb.rs
src/logging/: mod.rs
